06-services/ingress/context/web-v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: web-v1
  name: web-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      run: web-v1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: web-v1
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: web-v1
        ports:
        - containerPort: 8080
        resources: {}
status: {}
