06-services/ingress/context/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /v2/*
        backend:
          serviceName: web-v2
          servicePort: 8080
      - path: /v1/*
        backend:
          serviceName: web-v1
          servicePort: 8080
  tls:
  - secretName: web-tls
